feat: api get all student for general attendance
