# internal/features/attendance/dto/general_attendance_student_item.go
@@ -1,0 +1,11 @@
+package dto
+
+import (
+	"api/internal/features/attendance/domains"
+	studentDomain "api/internal/features/student/domains"
+)
+
+type GeneralAttendanceStudentItem struct {
+	Student studentDomain.Student           `json:"student" validate:"required"`
+	Record  domains.GeneralAttendanceRecord `json:"record" validate:"required"`
+}
